fix(Z1NEW-12): fix errors bot

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -22,3 +22,4 @@ jobs:
           release-type: node
           package-name: '@SandrJS/test-graphiQL'
           default-branch: develop
+          default_branch_protected: true
